# snacktech-lambda-authorizer

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  sonarqube.yml
src/: handler.py
src/client_authorizer/: db_connection.py  handler.py
terraform-lambda/: api-gateway-clientes-subresources.tf  api-gateway-clientes.tf  api-gateway-pedidos-subrecursos.tf  api-gateway-pedidos.tf  api-gateway-produtos-subrecursos.tf  api-gateway-produtos.tf  api-gateway.tf  data.tf  lambda.tf  vars.tf
