[tool.poetry]
name = "client_authorizer"
version = "0.1.0"
description = ""
authors = ["Rafael <rafael.dgs.1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyodbc = "^5.2.0"
aws-lambda-powertools = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
